<resources>
    <string name="app_name">SimpleCalculator</string>
    <string name="edit1_hint">정수1</string>
    <string name="edit2_hint">정수2</string>
    <string name="btn_plus">더하기</string>
    <string name="btn_minus">빼기</string>
    <string name="btn_multiply">곱하기</string>
    <string name="btn_divide">나누기</string>
    <string name="btn_remain">나머지값</string>
    <string name="btn_total">계산결과 : </string>
</resources>