<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit1_hint"
        android:inputType="numberDecimal"
        android:layout_margin="@dimen/margin_small"
    />

    <EditText
        android:id="@+id/edit2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:hint="@string/edit2_hint"
    android:inputType="numberDecimal"
    android:layout_margin="@dimen/margin_small"
    />

    <Button
        android:id="@+id/btn_plus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:padding="@dimen/padding_small"
        android:text="@string/btn_plus"
        android:textSize="@dimen/padding_small"
        />

    <Button
        android:id="@+id/btn_minus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:padding="@dimen/padding_small"
        android:text="@string/btn_minus"
        android:textSize="@dimen/padding_small"
        />

    <Button
        android:id="@+id/btn_multiply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:padding="@dimen/padding_small"
        android:text="@string/btn_multiply"
        android:textSize="@dimen/padding_small"
        />

    <Button
        android:id="@+id/btn_divide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:padding="@dimen/padding_small"
        android:text="@string/btn_divide"
        android:textSize="@dimen/padding_small"
        />

    <Button
        android:id="@+id/btn_remain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:padding="@dimen/padding_small"
        android:text="@string/btn_remain"
        android:textSize="@dimen/padding_small"
        />

    <TextView
        android:id="@+id/text_total"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:layout_margin="@dimen/margin_small"
        android:paddingBottom="@dimen/padding_large"
        android:padding="@dimen/padding_small"
        android:text="@string/btn_total"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        android:textColor="@color/text_result_color"
        />

</LinearLayout>